# ironfish-frost-embedded

./: Cargo.toml  README.md  build.rs  memory.x
src/: lib.rs  main.rs  seed.rs
