[package]
authors = ["joe@iflabs.network"]
edition = "2018"
readme = "README.md"
name = "ironfish-frost-embedded"
version = "0.1.0"

[dependencies]
# embedded-alloc = { git = "https://github.com/rust-embedded/embedded-alloc.git", rev = "4f472dc" }
embedded-alloc = { git = "https://github.com/iron-fish/embedded-alloc.git", rev = "ac02201f6cb8ad50cf55527a56db1eb14b0deebc" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
getrandom = { version = "0.2", features = ["custom"] }
rand = { version = "0.8.3", features = ["small_rng", "getrandom"], default-features = false }
ironfish-frost = { path = "../ironfish-frost", default-features = false, features = ["dkg"]}


panic-semihosting = { version = "0.6.0", features = ["exit"] }
# panic-halt = "0.2.0"


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
